--- a/3.HTML
+++ b/3.HTML
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<title>FRIENDS-RYAN</title>
+<title>Hello FRIENDS</title>
 <meta charset="utf-8">
 </head>
 <body>
 <h1><a href="index.html"> KAKAO</a></h1> <ol>
-  <h2><li><a href="1.HTML">MUZI & CON</a></li><h2> <h2><li><a href="2.HTML">NEO & PRODO</a></li><h2><h2><li><a href="3.HTML">RYAN</a></li><h2>
+<h2><li><a href="1.HTML">MUZI & CON</a></li></h2>
+<h2><li><a href="2.HTML">NEO & PRODO</a></li></h2>
+<h2><li><a href="3.HTML">RYAN</a></li></h2>
 </ol>
 <br><h2>RYAN</h2> <img src="RYAN.jpg" width="100%">
 <h2>KAKAO FRIENDS</h2>
